--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,1 +1,9 @@
-{ image: { file: .gitpod.Dockerfile } }
+image:
+  file: .gitpod.Dockerfile
+
+tasks:
+  - init: pip3 install -r requirements.txt
+    command: clear && python3 main.py
+    name: Split terminal
+  - openMode: split-right
+    command: echo SplitTerminal && clear
