--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,5 @@ image:
 
 tasks:
   - init: pip3 install -r requirements.txt
-    command: clear && python3 main.py
-    name: Split terminal
-  - openMode: split-right
-    command: echo SplitTerminal && clear
+    command: clear && pip install --upgrade pip
+  
